tests/fixtures/invalid/uninferable_none.lby
fn main -> i64
    let x = none
    0
